[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 65.5.1",
    "wheel"
]

[project]
name = "Python-Project-Template"
version = "1.0.0"
description = "Project template for python development"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dorapower", email = "thatisluo@outlook.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]
dependencies = [
]
